- BUG: The header in TortoiseBlame was shown in the wrong font in translated
       versions. (Kazutoshi Satoda)
- BUG: The state of the "Floppy drives" checkbox was not set correctly
       the first time on startup. (Stefan)
- BUG: If the file list was initially empty, showing more files didn't
       work correctly. (Stefan)
- BUG: In the revision graph, if a button on the toolbar is pressed while
       the updating thread is running the state of the button changed
       without the action being done. (Stefan)
- BUG: Reverting a file removed it from the file list, even if it
       was switched. (Ivan Gerasimov)
- BUG: Selecting fonts with non-ascii names didn't work in the
       scintilla edit control. (Kazutoshi Satoda)

Version 1.4.0RC1
- NEW: Command line param /bugid to prefill the bug ID
       in the commit dialog. See issue #202 for details. (Stefan)
- NEW: User defined regexes to parse the files for keywords used
       for autoexpanding in the commit dialog can now be stored
       in %APPDATA%\TortoiseSVN\autolist.txt so they won't get
       overwritten on upgrades. (Stefan)
- NEW: Allow "compare with base" for added and deleted files
       in the commit/cfm dialog. (Stefan)
- NEW: Customizable update system, see issue #209 for details.
       (Hans-Emil Skogh, Stefan)
- NEW: The status list control is now configurable. Columns can
       be reordered, hidden or shown. And the column sizes are 
       stored between sessions. See issue #80 for details. (Stefan)
- NEW: The revision graph shows the last committed revision
       too for every branch/tag. See issue #192 for details. (Stefan)
- NEW: The revision graph can show all revisions where an URL
       has been modified, not just the copy graph. See
       issue #192 for details. (Stefan)
- NEW: The revision graph can show the nodes sorted by path.
       See issue #222 for details. (Stefan)
- NEW: The 'OK' button in all dialogs is now disabled until at least